Fix layout bug

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,8 +1,7 @@
 .titulo{ 
     font-size: 32px;
-    color: var(--cor-background);
-    background-color: var(--cor-azul__claro);
+    color:var(--cor-azul__claro);
     text-align: center;
-    padding-top: 40px;
+    padding-top: 50px;
     padding-bottom: 20px;
 }
