--- a/src/components/MenuMobile/MenuMobile.css
+++ b/src/components/MenuMobile/MenuMobile.css
@@ -1,10 +1,3 @@
-body {
-  background: #4AA6FB;
-  display: flex;
-  font-family: sans-serif;
-  justify-content: center;
-  margin: 0;
-}
 
 .menu-mobile {
   position: relative;
@@ -18,8 +11,6 @@ body {
   width: 23px;
   height: 23px;
 }
-
-
 
 .shadow.cut {
   position: absolute;
